[package]
name = "to_debug"
version = "0.1.0"
authors = ["JoJoJet <joe102000@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An alternative to the ToString trait that uses the Debug trait"
repository = "https://github.com/JoJoJet/to_debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
